--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -28,7 +28,7 @@ network  --hostname=default-vm
 # Root password
 rootpw --iscrypted HASHGOESHERE
 # System timezone
-timezone Europe/London --isUtc --ntpservers=prime.transformers
+timezone America/New_York --isUtc --ntpservers=pool.ntp.org
 # System bootloader configuration
 bootloader --location=mbr --boot-drive=sda
 # Partition clearing information
