--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -36,9 +36,9 @@ ignoredisk --only-use=sda
 # LVM
 
 # Disk partitioning information
-part /boot --fstype ext4 --ondisk=sda --size=1000
-part pv.18 --ondisk=sda --size=8004
-part pv.11 --ondisk=sda --size=8004
+part /boot --fstype ext4 --size=1000
+part pv.18 --size=8004
+part pv.11 --size=8004
 volgroup lg_data --pesize=4096 pv.18
 volgroup lg_os --pesize=4096 pv.11
 logvol /  --fstype xfs --size=4000 --name=lv_root --vgname=lg_os
