--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -39,17 +39,17 @@ ignoredisk --only-use=sda
 part /boot --fstype ext4 --size=1000
 part pv.18 --size=8004
 part pv.11 --size=8004
-volgroup lg_data --pesize=4096 pv.18
-volgroup lg_os --pesize=4096 pv.11
-logvol /  --fstype xfs --size=4000 --name=lv_root --vgname=lg_os
-logvol /home  --fstype xfs --size=2000 --name=lv_home --vgname=lg_data
-logvol /tmp  --fstype xfs --size=1000 --name=lv_tmp --vgname=lg_os
-logvol /var  --fstype xfs --size=2000 --name=lv_var --vgname=lg_os
-logvol /var/tmp  --fstype xfs --size=1000 --name=lv_var_tmp --vgname=lg_os
-logvol /var/www  --fstype xfs --size=5000 --name=lv_var_www --vgname=lg_data
-logvol /var/log  --fstype xfs --size=1500 --name=lv_var_log --vgname=lg_os
-logvol /var/log/audit  --fstype xfs --size=500 --name=lv_var_log_audit --vgname=lg_os
-logvol swap  --fstype swap --size=1000 --name=lv_swap --vgname=lg_data
+volgroup lgdata --pesize=4096 pv.18
+volgroup lgos --pesize=4096 pv.11
+logvol /  --fstype ext4 --size=4000 --name=lv_root --vgname=lgos
+logvol /home  --fstype ext4 --size=2000 --name=lv_home --vgname=lgdata
+logvol /tmp  --fstype ext4 --size=1000 --name=lv_tmp --vgname=lgos
+logvol /var  --fstype ext4 --size=2000 --name=lv_var --vgname=lgos
+logvol /var/tmp  --fstype ext4 --size=1000 --name=lv_ar_tmp --vgname=lgos
+logvol /var/www  --fstype ext4 --size=5000 --name=lv_var_www --vgname=lgdata
+logvol /var/log  --fstype ext4 --size=1500 --name=lv_var_log --vgname=lgos
+logvol /var/log/audit  --fstype ext4 --size=500 --name=lv_var_log_audit --vgname=lgos
+logvol swap  --fstype swap --size=1000 --name=lv_swap --vgname=lgdata
 
 %packages
 @core
