--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -36,20 +36,20 @@ ignoredisk --only-use=sda
 # LVM
 
 # Disk partitioning information
-part /boot --fstype ext4 --size=1000
-part pv.18 --size=8004
-part pv.11 --size=8004
-volgroup lgdata --pesize=4096 pv.18
-volgroup lgos --pesize=4096 pv.11
-logvol /  --fstype ext4 --size=4000 --name=lv_root --vgname=lgos
-logvol /home  --fstype ext4 --size=2000 --name=lv_home --vgname=lgdata
-logvol /tmp  --fstype ext4 --size=1000 --name=lv_tmp --vgname=lgos
-logvol /var  --fstype ext4 --size=2000 --name=lv_var --vgname=lgos
-logvol /var/tmp  --fstype ext4 --size=1000 --name=lv_ar_tmp --vgname=lgos
-logvol /var/www  --fstype ext4 --size=5000 --name=lv_var_www --vgname=lgdata
-logvol /var/log  --fstype ext4 --size=1500 --name=lv_var_log --vgname=lgos
-logvol /var/log/audit  --fstype ext4 --size=500 --name=lv_var_log_audit --vgname=lgos
-logvol swap  --fstype swap --size=1000 --name=lv_swap --vgname=lgdata
+part /boot --fstype ext4 --fsoptions="noatime" --size=1000
+part pv.1 --size=8004 --grow
+part pv.2 --size=8004 --grow
+volgroup lgos --pesize=4096 pv.1
+volgroup lgdata --pesize=4096 pv.2
+logvol / --fstype ext4 --fsoptions="noatime" --name=lv_root --vgname=lgos --size=8192
+logvol /home --fstype ext4 --size=2000 --name=lv_home --vgname=lgdata
+logvol /tmp --fstype ext4 --size=1000 --name=lv_tmp --vgname=lgos
+logvol /var --fstype ext4 --size=2000 --name=lv_var --vgname=lgos
+logvol /var/tmp --fstype ext4 --size=1000 --name=lv_ar_tmp --vgname=lgos
+logvol /var/www --fstype ext4 --size=5000 --name=lv_var_www --vgname=lgdata
+logvol /var/log --fstype ext4 --size=1500 --name=lv_var_log --vgname=lgos
+logvol /var/log/audit --fstype ext4 --size=500 --name=lv_var_log_audit --vgname=lgos
+logvol swap --fstype swap --size=1000 --name=lv_swap --vgname=lgdata
 
 %packages
 @core
