--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -37,13 +37,11 @@ ignoredisk --only-use=sda
 
 # Disk partitioning information
 part /boot --fstype ext4 --fsoptions="noatime" --size=1000
-part pv.1 --size=8004 --grow
-part pv.2 --size=8004 --grow
-volgroup lgos --pesize=4096 pv.1
-volgroup lgdata --pesize=4096 pv.2
-logvol / --fstype ext4 --fsoptions="noatime" --name=lv_root --vgname=lgos --size=8192
+part pv.1 --size=16384 --grow
+volgroup lgdata --pesize=4096 pv.1
+logvol / --fstype ext4 --fsoptions="noatime" --name=lv_root --vgname=lgdata --size=8192
 logvol swap --fstype swap --name=lv_swap --vgname=lgdata --size=2048
-logvol /var --fstype ext4 --fsoptions="noatime,nodev" --name=lv_var --vgname=lgos --size=4096
+logvol /var --fstype ext4 --fsoptions="noatime,nodev" --name=lv_var --vgname=lgdata --size=4096
 logvol /home --fstype ext4 --name=lv_home --vgname=lgdata --size=2048
 
 %packages
