--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -45,7 +45,14 @@ logvol /var --fstype ext4 --fsoptions="noatime,nodev" --name=lv_var --vgname=lgd
 logvol /home --fstype ext4 --name=lv_home --vgname=lgdata --size=2048
 
 %packages
-@core
+core
+epel-release
+yum
+crontabs
+ntp
+aide
+iptables
+rsyslog
  %end
 
 %post
