--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -43,8 +43,13 @@ logvol / --fstype ext4 --fsoptions="noatime" --name=lv_root --vgname=lgdata --si
 logvol swap --fstype swap --name=lv_swap --vgname=lgdata --size=2048
 logvol /var --fstype ext4 --fsoptions="noatime,nodev" --name=lv_var --vgname=lgdata --size=4096
 logvol /home --fstype ext4 --name=lv_home --vgname=lgdata --size=2048
+logvol /tmp --fstype ext4 --size=1000 --name=lv_tmp --vgname=lgdata
+logvol /var/tmp --fstype ext4 --name=lv_ar_tmp --vgname=lgdata --size=1024
+logvol /var/www --fstype ext4 --name=lv_var_www --vgname=lgdata --size=4096
+logvol /var/log --fstype ext4 --name=lv_var_log --vgname=lgdata --size=1536
+logvol /var/log/audit --fstype ext4 --name=lv_var_log_audit --vgname=lgdata --size=512
 
-%packages
+%packages --nobase
 core
 epel-release
 yum
