--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -49,16 +49,9 @@ logvol /var/www --fstype ext4 --name=lv_var_www --vgname=lgdata --size=4096
 logvol /var/log --fstype ext4 --name=lv_var_log --vgname=lgdata --size=1536
 logvol /var/log/audit --fstype ext4 --name=lv_var_log_audit --vgname=lgdata --size=512
 
-%packages --nobase
-core
-epel-release
-yum
-crontabs
-ntp
-aide
-iptables
-rsyslog
- %end
+%packages
+@core
+%end
 
 %post
 %end
