--- a/secure-sample.cfg
+++ b/secure-sample.cfg
@@ -53,6 +53,10 @@ logvol swap --fstype swap --name=lv_swap --vgname=vg00 --size=2048
 logvol /var --fstype ext4 --fsoptions="noatime,nodev" --name=lv_var --vgname=vg00 --size=4096
 logvol /home --fstype ext4 --name=lv_home --vgname=vg00 --size=2048
 logvol /tmp --fstype ext4 --name=lv_tmp --vgname=vg00 --size=1024
+logvol /var/tmp --fstype xfs --name=lv_var_tmp --vgname=vg00 --size=1024
+logvol /var/www --fstype xfs --name=lv_var_www --vgname=vg00 --size=4096 
+logvol /var/log --fstype xfs --name=lv_var_log --vgname=vg00 --size=2048
+logvol /var/log/audit --fstype xfs --name=lv_var_log_audit --vgname=vg00 --size=512
 
 %packages
 @core
